--- a/mybatis-example/pom.xml
+++ b/mybatis-example/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>mockito-junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>5.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
