--- a/virtual-threads-demo/pom.xml
+++ b/virtual-threads-demo/pom.xml
@@ -12,10 +12,9 @@
   <url>https://howtodoinjava.com</url>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>com.howtodoinjava</groupId>
+    <artifactId>Spring-Boot3-Demos</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -34,16 +33,6 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
