Spring Boot Jasper Report Example

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <module>ehcache-example</module>
     <module>task-scheduler</module>
     <module>jsp-demo</module>
+    <module>jasper-reports-example</module>
   </modules>
 
   <build>
