--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.0</version>
+    <version>3.1.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -43,7 +43,7 @@
     <module>mybatis-example</module>
     <module>problem-detail-error-responses-example</module>
     <module>rsocket</module>
-    <module>virtual-threads-demo</module>
+    <!--<module>virtual-threads-demo</module>-->
     <module>webflux-part-event-api-example</module>
     <module>spring-boot-hateoas</module>
     <module>security</module>
@@ -53,6 +53,7 @@
     <module>task-scheduler</module>
     <module>jsp-demo</module>
     <module>jasper-reports-example</module>
+    <module>spring-restclient</module>
   </modules>
 
   <build>
