--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.idea
 /.idea/aws.xml
 /.idea/compiler.xml
 /.idea/dbnavigator.xml
