--- a/inventory-management-app/inventory-mgmt-service/pom.xml
+++ b/inventory-management-app/inventory-mgmt-service/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>com.howtodoinjava</groupId>
 		<artifactId>Spring-Boot3-Demos</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.howtodoinjava</groupId>
