--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <module>mybatis-example</module>
     <module>problem-detail-error-responses-example</module>
     <module>rsocket</module>
-    <!--<module>virtual-threads-demo</module>-->
+    <module>virtual-threads-demo</module>
     <module>webflux-part-event-api-example</module>
     <module>spring-boot-hateoas</module>
     <module>security</module>
