--- a/virtual-threads-demo/pom.xml
+++ b/virtual-threads-demo/pom.xml
@@ -10,6 +10,10 @@
   <name>virtual-threads-demo</name>
   <url>https://howtodoinjava.com</url>
 
+  <properties>
+    <java.version>19</java.version>
+  </properties>
+
   <parent>
     <groupId>com.howtodoinjava</groupId>
     <artifactId>Spring-Boot3-Demos</artifactId>
