--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <module>jasper-reports-example</module>
     <module>spring-restclient</module>
     <module>soap-ws-example</module>
+    <module>soap-client-example</module>
   </modules>
 
   <build>
